Fix able to press on mobile nav even if it is hidden

--- a/styles/_humburgernav.scss
+++ b/styles/_humburgernav.scss
@@ -43,13 +43,13 @@
     height: 100vh;
     position: fixed;
     top: 0;
-    left: 0;
+    left: -400px;
     z-index: 125;
     display: flex;
     justify-content: center;
     align-items: center;
     opacity: 0;
-    width: 0;
+    width: 100;
     transition: all 0.8s cubic-bezier(0.97, -0.25, 0.13, 1.31);
   }
 
@@ -103,6 +103,7 @@
   }
 
   &__checkbox:checked ~ &__nav {
+    left: 0;
     opacity: 1;
     width: 100%;
   }
